Fix #1591 Set max height and overflow override for autosize UX

--- a/themes/admin_themes/Artemis/acp_styles.css
+++ b/themes/admin_themes/Artemis/acp_styles.css
@@ -1614,6 +1614,8 @@ textarea.form-control {
     padding: 21px 15px !important;
     font-family: serif;
     line-height: 30px;
+    overflow-y: auto !important;
+    max-height: 300px;
 }
 
 /* Site Information */
